# the-language

./: .gitignore  CMakeLists.txt  README.md  TODOS.md  output.c
.github/workflows/: cmake-single-platform.yml
src/: XIR.cpp  XIR.hpp  ast.cpp  ast.hpp  astGen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
test/: if_else.x  m.x  print.x  print_muilt.x  print_var.x  return.x
